--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -18,7 +18,7 @@
         "myContracts": "MY CONTRACTS",
         "welcome": "Welcome,",
         "logout": "logout",
-        "ownerJobs": "OWN JOBS",
+        "myProjects": "MY PROJECTS",
         "Talents": "TALENTS",
         "selectRole": " SELECT ROLE",
         "chat": "CHAT",
