--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -308,6 +308,7 @@
 
     "Notes": {
         "youDon-tHaveOffers": "YOU DON’T HAVE ANY OFFERS",
+        "empty-talents": "YOU DON’T HAVE ANY TALENTS",
         "youDon-tHaveProposals": "YOU DON’T HAVE ANY PROPOSALS",
         "youDon-tHaveContracts": "YOU DON’T HAVE ANY CONTRACTS",
         "youDon-tHaveInvitations": "YOU DON’T HAVE ANY INVITATIONS",
