--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -102,23 +102,24 @@
     "ResetPage": {
         "title": "Reset Password",
         "passwordTitle": {
-            "item": "Password:",
-            "placeholder": "Your password",
-            "error": "password must contain at least one capital letter, one number and length must be minimum 8 symbols"
+            "item": "New Password:",
+            "placeholder": "Your new password",
+            "error": "Password must contain at least one capital letter, one number and length must be minimum 8 symbols"
         },
         "conPasswordTitle": {
-            "item": "Confirm Password:",
-            "placeholder": "Confirm your password",
-            "error": "Password must be same"
+            "item": "Confirm New Password:",
+            "placeholder": "Confirm your new password",
+            "error": "The passwords you entered do not match, please check again",
+            "password": "Please confirm your password!"
         },
         "error": "Passwords do not match, please try again",
         "btnText": "Save Password",
         "linkText": "Back to Login?",
-        "loginText": "Successfully done. Now please Login",
+        "loginText": "Successfully done. Now please",
         "passwordError": "Something went error, please try again!"
     },
     "VerifyEmail": {
-        "fineTitle": "A recovery letter is sent, please check your email or go to Login page.",
+        "fineTitle": "A recovery letter is sent, please check your email or go to",
         "poorTitle": {
             "start": "E-Mail Not Found: We were not able to locate",
             "end": "in our system. Please try another e-mail address."
@@ -255,18 +256,6 @@
         "userEmail": "Email",
         "userPassword": "Password",
         "btnChangeText": "Change",
-        "passwordTitle": {
-            "item": "New Password:",
-            "placeholder": "Your new password",
-            "error": "Password must contain at least one capital letter, one number and length must be minimum 8 symbols"
-        },
-        "conPasswordTitle": {
-            "item": "Confirm New Password:",
-            "placeholder": "Confirm your new password",
-            "error": "The passwords you entered do not match, please check again",
-            "password": "Please confirm your password!"
-        },
-        "btnText": "Save Password",
         "afterChangePassword": {
             "success": "Password successfully changed!",
             "error": "Something went wrong, please try again later!"
