--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -87,7 +87,8 @@
         "contact_info": "Contact Info",
         "save_changes": "Save changes",
         "education_name": "Name of Education",
-        "back": "Back"
+        "back": "Back",
+        "amountError12": "The entered valid value must be between 1 and 12."
     },
 
     "ForgotPage": {
